[patch.crates-io]
abomonation = { git = "https://github.com/markbt/abomonation", rev = "0f43346d2afa2aedc64d61f3f4273e8d1e454642" }
audio_streams = { git = "https://github.com/google/crosvm", rev = "7d2e877a2a0a772c199fe8b6b51aec7c1b166467" }
backtrace = { git = "https://github.com/rust-lang/backtrace-rs", rev = "df979dcf80027eb047d7bb9e0874710c15009f31" }
base64urlsafedata = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "d278c56adfa39a0723c79bdcd461644194bc5138" }
bf-tree = { git = "https://github.com/ddrcoder/bf-tree.git", rev = "d84feb51c4568c9e1aa6716e7dcd99f8d9892da8" }
bindgen = { git = "https://github.com/jsgf/rust-bindgen", rev = "4d385d21c160e6ee1f443aeb7e00528a1dc7fd44" }
bindgen-cli = { git = "https://github.com/jsgf/rust-bindgen", rev = "4d385d21c160e6ee1f443aeb7e00528a1dc7fd44" }
bytemuck = { git = "https://github.com/jsgf/bytemuck", rev = "e7ba210910d49dee833773b2a3e0f5e39805ba08" }
bytemuck_derive = { git = "https://github.com/jsgf/bytemuck", rev = "e7ba210910d49dee833773b2a3e0f5e39805ba08" }
c2pa = { git = "https://github.com/dhruvmongia/c2pa-rs", rev = "871a0f10d6a3a627229fc769de3d88f85024b64d" }
cbindgen = { git = "https://github.com/mozilla/cbindgen.git", rev = "cf94b56ef35d91f8420e8f89fee70074d39d068d" }
cxx = { git = "https://github.com/facebookexperimental/cxx.git", rev = "870ebbecad0f6be394d4f9fb9bd62b551662651a" }
cxx-build = { git = "https://github.com/facebookexperimental/cxx.git", rev = "870ebbecad0f6be394d4f9fb9bd62b551662651a" }
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7dc6e324b1788a6b7fb9f3a1953c512923a3e9f0" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
k = { git = "https://github.com/prnthp-meta/k", rev = "f06b504c563a4763dbf2d47366b868f67d5c9dd2" }
libbpf-sys = { git = "https://github.com/calebho/libbpf-sys.git", rev = "ac56b9d69f477711b8f02bab12319999e8ba410b" }
libcras = { git = "https://github.com/google/crosvm", rev = "7d2e877a2a0a772c199fe8b6b51aec7c1b166467" }
lru-disk-cache = { git = "https://github.com/mozilla/sccache", rev = "fdbf843d174c6796d736b2b61dab0297670390f8" }
minijail = { git = "https://chromium.googlesource.com/chromiumos/platform/minijail", rev = "fc020fd4672b3340ee706e192d043e12df8c8578" }
murmur3 = { git = "https://github.com/stusmall/murmur3", rev = "f363bf6dd1d668988bf798c320823f8ceaedf5aa" }
pcap = { git = "https://github.com/qrnch-jan/pcap", rev = "0c6ed076c84ef0c63198d384a24d66b737b24e4a" }
perf-event = { version = "0.4", git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4" }
perf-event-open-sys = { version = "5.0", git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4" }
plexi-core = { version = "0.1.2", git = "https://github.com/markbt/plexi", rev = "9d459b7fb26101e5c9c2489c220cbae03d1d7afe" }
prettytable-rs = { git = "https://github.com/asm89/prettytable-rs", rev = "d5e2a480c02b0c4be8d61f4f3a9039c841376433" }
protobuf-build = { git = "https://github.com/fbsource/protobuf-build", rev = "ee1de946ce2fd7d06a7a4fab7141e02c49f0981f" }
quickcheck = { git = "https://github.com/jakoschiko/quickcheck", rev = "6ecdf5bb4b0132ce66670b4d46453aa022ea892c" }
quickcheck_async = { git = "https://github.com/markbt/quickcheck_async", rev = "76b13525ca93e0725e757f841fc6ccab8bae1913" }
ratatui = { git = "https://github.com/fbsource/ratatui", rev = "e49703b568262fceffcb8b95456a47926ebabf33" }
rinja = { git = "https://github.com/fbsource/askama", rev = "2fc6173c98034c148f46330fc39a006cf0b09efe" }
riscv = { git = "https://github.com/jsgf/riscv.git", rev = "90cfc5f2404e39e085e12845944d5bbbc869c290" }
riscv-pac = { git = "https://github.com/jsgf/riscv.git", rev = "90cfc5f2404e39e085e12845944d5bbbc869c290" }
riscv-rt = { git = "https://github.com/jsgf/riscv.git", rev = "90cfc5f2404e39e085e12845944d5bbbc869c290" }
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "24317d5eab40fbc33caf1142946e2f39caad73ea" }
stabby = { git = "https://github.com/nitinsingh-meta/stabby", rev = "304c895c34e502fc635b85df6d4f22f746747ed4" }
vhost = { git = "https://github.com/rust-vmm/vhost/", rev = "93e2d9cf9151a5cbeef4fff1fdf26fdb989f060d" }
vm-allocator = { git = "https://github.com/rust-vmm/vm-allocator", rev = "5fb545cc6e41fdc9f27d48d97ed26274a35bc6c6" }
warp = { git = "https://github.com/jdthomas/warp.git", rev = "c794232d182abaa3add8184e7d661e084cc516c5" }

[workspace]
members = [
  "benchmarks/derived_data",
  "benchmarks/filestore",
  "benchmarks/storage_config",
  "blobimport_lib",
  "blobimport_lib/consts",
  "blobrepo/blobrepo_hg",
  "blobrepo/blobsync",
  "blobrepo/common",
  "blobrepo/errors",
  "blobrepo/override",
  "blobrepo_utils",
  "blobstore",
  "blobstore/blobstore_stats",
  "blobstore/cacheblob",
  "blobstore/chaosblob",
  "blobstore/delayblob",
  "blobstore/ephemeral_blobstore",
  "blobstore/factory",
  "blobstore/fileblob",
  "blobstore/if",
  "blobstore/if/clients",
  "blobstore/if/mocks",
  "blobstore/if/services",
  "blobstore/logblob",
  "blobstore/memblob",
  "blobstore/multiplexedblob",
  "blobstore/multiplexedblob_wal",
  "blobstore/packblob",
  "blobstore/packblob/if",
  "blobstore/packblob/if/clients",
  "blobstore/packblob/if/mocks",
  "blobstore/packblob/if/services",
  "blobstore/prefixblob",
  "blobstore/readonlyblob",
  "blobstore/redactedblobstore",
  "blobstore/s3blob",
  "blobstore/samplingblob",
  "blobstore/sqlblob",
  "blobstore/test_utils",
  "blobstore/throttledblob",
  "blobstore/virtually_sharded_blobstore",
  "blobstore_sync_queue",
  "cmdlib/base_app",
  "cmdlib/caching",
  "cmdlib/commit_id",
  "cmdlib/commit_id_types",
  "cmdlib/config_args",
  "cmdlib/cross_repo",
  "cmdlib/displaying",
  "cmdlib/displaying/graph",
  "cmdlib/environment",
  "cmdlib/extensions",
  "cmdlib/log",
  "cmdlib/mononoke_app",
  "cmdlib/mononoke_app/shutdown_timeout",
  "cmdlib/mononoke_app/tls",
  "cmdlib/scrubbing",
  "cmdlib/sharding",
  "cmdlib/sharding_ext",
  "cmdlib/zk_leader_election",
  "common/acl_regions",
  "common/assembly_line",
  "common/async_limiter",
  "common/async_limiter/examples/tokio_v2",
  "common/cas_client/changesets_uploader",
  "common/cas_client/client",
  "common/cas_client/scm_client",
  "common/cats",
  "common/connection_security_checker",
  "common/copy_utils",
  "common/dedupmap",
  "common/futures_watchdog",
  "common/gotham_ext",
  "common/hgproto",
  "common/iterhelpers",
  "common/lfs_protocol",
  "common/logger_ext",
  "common/memory",
  "common/metadata",
  "common/mononoke_configs",
  "common/mononoke_macros",
  "common/mononoke_macros/proc_macros",
  "common/mononoke_repos",
  "common/observability",
  "common/ods_counters",
  "common/path_hash",
  "common/permission_checker",
  "common/quiet_stream",
  "common/rate_limiting",
  "common/reloader",
  "common/rendezvous",
  "common/running",
  "common/rust/caching_ext",
  "common/rust/sql_ext",
  "common/rust/sql_ext/proc_macros",
  "common/rust/sql_ext/sql_query_telemetry",
  "common/scribe_ext",
  "common/scuba_ext",
  "common/session_id",
  "common/sql_construct",
  "common/thrift_convert",
  "common/thrift_convert/proc_macros",
  "common/thrift_convert/tests/if",
  "common/thrift_convert/tests/if/clients",
  "common/thrift_convert/tests/if/mocks",
  "common/thrift_convert/tests/if/services",
  "common/time_measuring",
  "common/time_window_counter",
  "common/topo_sort",
  "common/type_map",
  "common/uniqueheap",
  "common/wait_for_replication",
  "common/yield_stream",
  "derived_data",
  "derived_data/basename_suffix_skeleton_manifest_v3",
  "derived_data/blame",
  "derived_data/bulk_derivation",
  "derived_data/case_conflict_skeleton_manifest",
  "derived_data/changeset_info",
  "derived_data/constants",
  "derived_data/content_manifest_derivation",
  "derived_data/deleted_manifest",
  "derived_data/fastlog",
  "derived_data/filenodes_derivation",
  "derived_data/fsnodes",
  "derived_data/if",
  "derived_data/if/clients",
  "derived_data/if/mocks",
  "derived_data/if/services",
  "derived_data/inferred_copy_from",
  "derived_data/manager",
  "derived_data/mercurial_derivation",
  "derived_data/remote",
  "derived_data/remote/if",
  "derived_data/remote/if/clients",
  "derived_data/remote/if/mocks",
  "derived_data/remote/if/services",
  "derived_data/skeleton_manifest",
  "derived_data/skeleton_manifest_v2",
  "derived_data/test_manifest",
  "derived_data/test_sharded_manifest",
  "derived_data/test_utils",
  "derived_data/unodes",
  "features/async_requests",
  "features/async_requests/client",
  "features/async_requests/if",
  "features/async_requests/if/clients",
  "features/async_requests/if/mocks",
  "features/async_requests/if/services",
  "features/async_requests/requests_table",
  "features/async_requests/worker",
  "features/cache_warmup",
  "features/changesets_creation",
  "features/commit_cloud",
  "features/commit_cloud/helpers",
  "features/commit_cloud/types",
  "features/commit_rewriting/backsyncer",
  "features/commit_rewriting/backsyncer/features/commit_rewriting/backsyncer_cmd",
  "features/commit_rewriting/bookmark_renaming",
  "features/commit_rewriting/bookmarks_validator",
  "features/commit_rewriting/commit_validator",
  "features/commit_rewriting/live_commit_sync_config",
  "features/commit_rewriting/megarepo",
  "features/commit_rewriting/mononoke_x_repo_sync_job",
  "features/commit_rewriting/movers",
  "features/commit_rewriting/reporting",
  "features/commit_rewriting/synced_commit_mapping",
  "features/commit_rewriting/synced_commit_mapping/features/commit_rewriting/pushrebase_hook",
  "features/commit_rewriting/synced_commit_mapping/if",
  "features/commit_rewriting/synced_commit_mapping/if/clients",
  "features/commit_rewriting/synced_commit_mapping/if/mocks",
  "features/commit_rewriting/synced_commit_mapping/if/services",
  "features/commit_transformation/commit_transformation",
  "features/cross_repo_sync",
  "features/diff",
  "features/history_traversal",
  "features/hooks",
  "features/microwave/builder",
  "features/microwave/features/microwave",
  "features/microwave/if",
  "features/microwave/if/clients",
  "features/microwave/if/mocks",
  "features/microwave/if/services",
  "features/pushrebase",
  "features/pushrebase/pushrebase_client",
  "features/pushrebase/pushrebase_hook",
  "features/pushrebase/pushrebase_hooks",
  "features/redaction",
  "features/repo_metadata",
  "features/repo_stats_logger",
  "features/repo_update_logger",
  "git/bundle_uri",
  "git/check_git_wc",
  "git/git-pool",
  "git/git_env",
  "git/git_types",
  "git/git_types/if",
  "git/git_types/if/clients",
  "git/git_types/if/mocks",
  "git/git_types/if/services",
  "git/gitexport",
  "git/gitexport/test_utils",
  "git/gitimport",
  "git/import_direct",
  "git/import_tools",
  "git/packetline",
  "git/packfile",
  "git/protocol",
  "jobs/blobstore_healer",
  "jobs/cas_sync",
  "jobs/modern_sync",
  "jobs/statistics_collector",
  "jobs/walker",
  "lfs_import_lib",
  "manifest",
  "megarepo_api",
  "megarepo_api/if/megarepo_configs",
  "megarepo_api/if/megarepo_configs/clients",
  "megarepo_api/if/megarepo_configs/mocks",
  "megarepo_api/if/megarepo_configs/services",
  "megarepo_api/mapping",
  "megarepo_api/megarepo_config",
  "megarepo_api/megarepo_error",
  "megarepo_api/pushredirect",
  "mercurial/bundles",
  "mercurial/mutation",
  "mercurial/mutation/if",
  "mercurial/mutation/if/clients",
  "mercurial/mutation/if/mocks",
  "mercurial/mutation/if/services",
  "mercurial/revlog",
  "mercurial/types",
  "mercurial/types/if",
  "mercurial/types/if/clients",
  "mercurial/types/if/mocks",
  "mercurial/types/if/services",
  "mercurial/types/mocks",
  "metaconfig/parser",
  "metaconfig/types",
  "mononoke_api",
  "mononoke_api_hg",
  "mononoke_types",
  "mononoke_types/mocks",
  "mononoke_types/serialization",
  "mononoke_types/serialization/clients",
  "mononoke_types/serialization/mocks",
  "mononoke_types/serialization/services",
  "repo_attributes/bonsai_blob_mapping",
  "repo_attributes/bonsai_git_mapping",
  "repo_attributes/bonsai_git_mapping/git_mapping_pushrebase_hook",
  "repo_attributes/bonsai_git_mapping/if",
  "repo_attributes/bonsai_git_mapping/if/clients",
  "repo_attributes/bonsai_git_mapping/if/mocks",
  "repo_attributes/bonsai_git_mapping/if/services",
  "repo_attributes/bonsai_globalrev_mapping",
  "repo_attributes/bonsai_globalrev_mapping/globalrev_pushrebase_hook",
  "repo_attributes/bonsai_globalrev_mapping/if",
  "repo_attributes/bonsai_globalrev_mapping/if/clients",
  "repo_attributes/bonsai_globalrev_mapping/if/mocks",
  "repo_attributes/bonsai_globalrev_mapping/if/services",
  "repo_attributes/bonsai_hg_mapping",
  "repo_attributes/bonsai_hg_mapping/if",
  "repo_attributes/bonsai_hg_mapping/if/clients",
  "repo_attributes/bonsai_hg_mapping/if/mocks",
  "repo_attributes/bonsai_hg_mapping/if/services",
  "repo_attributes/bonsai_svnrev_mapping",
  "repo_attributes/bonsai_svnrev_mapping/if",
  "repo_attributes/bonsai_svnrev_mapping/if/clients",
  "repo_attributes/bonsai_svnrev_mapping/if/mocks",
  "repo_attributes/bonsai_svnrev_mapping/if/services",
  "repo_attributes/bonsai_tag_mapping",
  "repo_attributes/bookmarks",
  "repo_attributes/bookmarks/bookmarks_cache",
  "repo_attributes/bookmarks/bookmarks_movement",
  "repo_attributes/bookmarks/bookmarks_types",
  "repo_attributes/bookmarks/dbbookmarks",
  "repo_attributes/bookmarks/warm_bookmarks_cache",
  "repo_attributes/commit_graph/buffered_commit_graph_storage",
  "repo_attributes/commit_graph/caching_commit_graph_storage",
  "repo_attributes/commit_graph/commit_graph",
  "repo_attributes/commit_graph/commit_graph_testlib",
  "repo_attributes/commit_graph/commit_graph_types",
  "repo_attributes/commit_graph/commit_graph_types/if",
  "repo_attributes/commit_graph/commit_graph_types/if/clients",
  "repo_attributes/commit_graph/commit_graph_types/if/mocks",
  "repo_attributes/commit_graph/commit_graph_types/if/services",
  "repo_attributes/commit_graph/in_memory_commit_graph_storage",
  "repo_attributes/commit_graph/memwrites_commit_graph_storage",
  "repo_attributes/commit_graph/preloaded_commit_graph_storage",
  "repo_attributes/commit_graph/sql_commit_graph_storage",
  "repo_attributes/deletion_log",
  "repo_attributes/filenodes",
  "repo_attributes/filenodes/if",
  "repo_attributes/filenodes/if/clients",
  "repo_attributes/filenodes/if/mocks",
  "repo_attributes/filenodes/if/services",
  "repo_attributes/filestore",
  "repo_attributes/git_ref_content_mapping",
  "repo_attributes/git_source_of_truth",
  "repo_attributes/git_symbolic_refs",
  "repo_attributes/git_symbolic_refs/if",
  "repo_attributes/git_symbolic_refs/if/clients",
  "repo_attributes/git_symbolic_refs/if/mocks",
  "repo_attributes/git_symbolic_refs/if/services",
  "repo_attributes/hook_manager/hook_manager",
  "repo_attributes/hook_manager/hook_manager_testlib",
  "repo_attributes/mutable_blobstore",
  "repo_attributes/mutable_counters",
  "repo_attributes/mutable_renames",
  "repo_attributes/mutable_renames/if",
  "repo_attributes/mutable_renames/if/clients",
  "repo_attributes/mutable_renames/if/mocks",
  "repo_attributes/mutable_renames/if/services",
  "repo_attributes/newfilenodes",
  "repo_attributes/phases",
  "repo_attributes/phases/sqlphases",
  "repo_attributes/pushrebase_mutation_mapping",
  "repo_attributes/repo_blobstore",
  "repo_attributes/repo_bookmark_attrs",
  "repo_attributes/repo_cross_repo",
  "repo_attributes/repo_derivation_queues",
  "repo_attributes/repo_derivation_queues/if",
  "repo_attributes/repo_derivation_queues/if/clients",
  "repo_attributes/repo_derivation_queues/if/mocks",
  "repo_attributes/repo_derivation_queues/if/services",
  "repo_attributes/repo_derived_data",
  "repo_attributes/repo_event_publisher",
  "repo_attributes/repo_identity",
  "repo_attributes/repo_lock/repo_lock",
  "repo_attributes/repo_metadata_checkpoint",
  "repo_attributes/repo_permission_checker",
  "repo_attributes/repo_sparse_profiles",
  "repo_attributes/restricted_paths",
  "repo_attributes/sql_query_config",
  "repo_authorization",
  "repo_client",
  "repo_client/getbundle_response",
  "repo_client/obsolete",
  "repo_client/remotefilelog",
  "repo_client/streaming_clone",
  "repo_client/unbundle",
  "repo_client/wirepack",
  "repo_factory",
  "repo_factory/config_only_repo_factory",
  "repo_factory/test_repo_factory",
  "scs/if",
  "scs/if/clients",
  "scs/if/mocks",
  "scs/if/services",
  "servers/git/git_server",
  "servers/lfs/lfs_server",
  "servers/scs/scs_errors",
  "servers/scs/scs_methods",
  "servers/slapi/slapi_server",
  "servers/slapi/slapi_server/context",
  "servers/slapi/slapi_server/qps",
  "servers/slapi/slapi_server/repo_listener",
  "servers/slapi/slapi_service",
  "servers/slapi/wireproto_handler",
  "servers/sshrelay",
  "tests/fixtures",
  "tests/utils",
  "third_party/git_delta",
  "tools/admin",
  "tools/aliasverify/tools/aliasverify",
  "tools/backfill_mapping",
  "tools/blobimport/tools/blobimport",
  "tools/bonsai_verify",
  "tools/check_git_wc/tools/check_git_wc",
  "tools/example",
  "tools/executor",
  "tools/import",
  "tools/packer",
  "tools/repo_import",
  "tools/sqlblob_gc",
  "tools/streaming_clone",
  "tools/tail-to-cloudwatch",
  "tools/testtool",
]
resolver = "2"

[workspace.package]
license = "GPLv2+"
