[patch.crates-io]
abomonation = { git = "https://github.com/markbt/abomonation", rev = "0f43346d2afa2aedc64d61f3f4273e8d1e454642" }

[workspace]
members = [
  "edenscmnative/bindings",
  "edenscmnative/bindings/modules/pyatexit",
  "edenscmnative/bindings/modules/pyauth",
  "edenscmnative/bindings/modules/pyblackbox",
  "edenscmnative/bindings/modules/pybytes",
  "edenscmnative/bindings/modules/pycats",
  "edenscmnative/bindings/modules/pycext",
  "edenscmnative/bindings/modules/pycheckout",
  "edenscmnative/bindings/modules/pyclientinfo",
  "edenscmnative/bindings/modules/pycliparser",
  "edenscmnative/bindings/modules/pyconchparser",
  "edenscmnative/bindings/modules/pyconfigloader",
  "edenscmnative/bindings/modules/pycopytrace",
  "edenscmnative/bindings/modules/pydag",
  "edenscmnative/bindings/modules/pydiffhelpers",
  "edenscmnative/bindings/modules/pydirs",
  "edenscmnative/bindings/modules/pydoctor",
  "edenscmnative/bindings/modules/pydrawdag",
  "edenscmnative/bindings/modules/pyeagerepo",
  "edenscmnative/bindings/modules/pyedenapi",
  "edenscmnative/bindings/modules/pyedenclient",
  "edenscmnative/bindings/modules/pyerror",
  "edenscmnative/bindings/modules/pyexchange",
  "edenscmnative/bindings/modules/pyfail",
  "edenscmnative/bindings/modules/pyfs",
  "edenscmnative/bindings/modules/pygitstore",
  "edenscmnative/bindings/modules/pyhgmetrics",
  "edenscmnative/bindings/modules/pyhgtime",
  "edenscmnative/bindings/modules/pyidentity",
  "edenscmnative/bindings/modules/pyindexedlog",
  "edenscmnative/bindings/modules/pyio",
  "edenscmnative/bindings/modules/pylinelog",
  "edenscmnative/bindings/modules/pylock",
  "edenscmnative/bindings/modules/pylz4",
  "edenscmnative/bindings/modules/pymanifest",
  "edenscmnative/bindings/modules/pymetalog",
  "edenscmnative/bindings/modules/pymodules",
  "edenscmnative/bindings/modules/pymutationstore",
  "edenscmnative/bindings/modules/pynodeipc",
  "edenscmnative/bindings/modules/pynodemap",
  "edenscmnative/bindings/modules/pypathhistory",
  "edenscmnative/bindings/modules/pypathmatcher",
  "edenscmnative/bindings/modules/pypprint",
  "edenscmnative/bindings/modules/pyprocess",
  "edenscmnative/bindings/modules/pyprogress",
  "edenscmnative/bindings/modules/pyrefencode",
  "edenscmnative/bindings/modules/pyregex",
  "edenscmnative/bindings/modules/pyrenderdag",
  "edenscmnative/bindings/modules/pyrepo",
  "edenscmnative/bindings/modules/pyrevisionstore",
  "edenscmnative/bindings/modules/pyrevlogindex",
  "edenscmnative/bindings/modules/pysptui",
  "edenscmnative/bindings/modules/pystatus",
  "edenscmnative/bindings/modules/pythreading",
  "edenscmnative/bindings/modules/pytoml",
  "edenscmnative/bindings/modules/pytracing",
  "edenscmnative/bindings/modules/pytreestate",
  "edenscmnative/bindings/modules/pyversion",
  "edenscmnative/bindings/modules/pyvlq",
  "edenscmnative/bindings/modules/pywebview",
  "edenscmnative/bindings/modules/pyworker",
  "edenscmnative/bindings/modules/pyworkingcopy",
  "edenscmnative/bindings/modules/pyxdiff",
  "edenscmnative/bindings/modules/pyzstd",
  "edenscmnative/bindings/modules/pyzstore",
  "edenscmnative/conch_parser",
  "edenscmnative/pybindings",
  "exec/eden_apfs_mount_helper",
  "exec/fsprobe",
  "exec/hgmain",
  "exec/scm_daemon",
  "exec/scratch",
  "lib/async-runtime",
  "lib/atomicfile",
  "lib/auth",
  "lib/backingstore",
  "lib/blackbox",
  "lib/blackbox/serde_alt",
  "lib/cats",
  "lib/checkout",
  "lib/clidispatch",
  "lib/clientinfo",
  "lib/cliparser",
  "lib/clone",
  "lib/commandserver",
  "lib/commitcloudsubscriber",
  "lib/config/hgrc-parser",
  "lib/config/loader",
  "lib/config/model",
  "lib/config/set",
  "lib/config/static",
  "lib/config/static/macros",
  "lib/config/union",
  "lib/control-point",
  "lib/copytrace",
  "lib/cpython-async",
  "lib/cpython-ext",
  "lib/dag",
  "lib/dag/benches",
  "lib/dag/bindag",
  "lib/dag/dag-types",
  "lib/dag/gitdag",
  "lib/debugtop",
  "lib/dev-logger",
  "lib/doctor/network",
  "lib/drawdag",
  "lib/eagerepo",
  "lib/edenapi",
  "lib/edenapi/ext",
  "lib/edenapi/trait",
  "lib/edenapi/types",
  "lib/edenapi/types/proc_macros",
  "lib/edenfs-client",
  "lib/encoding",
  "lib/exchange",
  "lib/formatter",
  "lib/fsinfo",
  "lib/fsyncglob",
  "lib/gitstore",
  "lib/hg-http",
  "lib/hg-metrics",
  "lib/hgcommands",
  "lib/hgcommits",
  "lib/hgtime",
  "lib/http-client",
  "lib/identity",
  "lib/indexedlog",
  "lib/insta_ext",
  "lib/io",
  "lib/io/term/logger",
  "lib/io/term/style",
  "lib/lazystr",
  "lib/linelog",
  "lib/lz4-pyframe",
  "lib/manifest",
  "lib/manifest-tree",
  "lib/metalog",
  "lib/metrics",
  "lib/metrics/render",
  "lib/migration",
  "lib/mincode",
  "lib/minibench",
  "lib/minibytes",
  "lib/mpatch",
  "lib/mpatch-sys",
  "lib/mutationstore",
  "lib/nodemap",
  "lib/nonblocking",
  "lib/pathhistory",
  "lib/pathmatcher",
  "lib/pprint",
  "lib/procinfo",
  "lib/progress/model",
  "lib/progress/render",
  "lib/python-modules",
  "lib/python-modules/codegen",
  "lib/radixbuf",
  "lib/refencode",
  "lib/renderdag",
  "lib/repo",
  "lib/repo_name",
  "lib/repolock",
  "lib/revisionstore",
  "lib/revisionstore/types",
  "lib/revlogindex",
  "lib/revsets",
  "lib/runlog",
  "lib/sampling",
  "lib/sparse",
  "lib/spawn-ext",
  "lib/status",
  "lib/storemodel",
  "lib/storemodel/hgstore",
  "lib/streams",
  "lib/third-party/conch-parser",
  "lib/third-party/streampager",
  "lib/third-party/webview-sys",
  "lib/thrift-types",
  "lib/tracing-analyzer",
  "lib/tracing-collector",
  "lib/tracing-reload",
  "lib/tracing-runtime-callsite",
  "lib/tracing-sampler",
  "lib/treestate",
  "lib/types",
  "lib/util",
  "lib/util/atexit",
  "lib/util/hgplain",
  "lib/util/nodeipc",
  "lib/util/nodeipc/derive",
  "lib/util/testutil",
  "lib/util/udsipc",
  "lib/version",
  "lib/vfs",
  "lib/vlqencoding",
  "lib/webview-app",
  "lib/workingcopy",
  "lib/xdiff",
  "lib/xdiff-sys",
  "lib/zstdelta",
  "lib/zstore",
]
